chore: button styling

--- a/apps/web/components/google-login-button/google-login-button.module.css
+++ b/apps/web/components/google-login-button/google-login-button.module.css
@@ -1,24 +1,10 @@
 .button {
-  background-image: url(/google-icon.png);
-  background-size: 20px 20px;
-  background-repeat: no-repeat;
-  background-position: 10px 9px;
-}
-
-.button:hover {
-  background-image: url(/google-icon.png);
-  background-size: 20px 20px;
-  background-repeat: no-repeat;
-  background-position: 10px 9px;
-}
-
-.button:active {
-  background-image: url(/google-icon.png);
-  background-size: 20px 20px;
-  background-repeat: no-repeat;
-  background-position: 10px 9px;
+  height: 50px;
+  font-size: 1.3em;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .span {
-  margin-left: 25px;
+  margin-left: 5px;
 }
