--- a/apps/web/components/app.module.css
+++ b/apps/web/components/app.module.css
@@ -2,6 +2,20 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom:0;
+
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.wrapper {
+  position: relative;
+  height: 100%;
+}
+
+.row {
   height: 100%;
 }
